Fix sidebar overflow, make scrolls thinner

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -18,6 +18,9 @@ License: none (public domain)
     background-color: #888; }
   * ::-webkit-scrollbar-thumb:hover {
     background-color: #555; }
+  @supports (scrollbar-width: thin) {
+    * {
+      scrollbar-width: thin; } }
 
 html,
 body,
@@ -196,8 +199,7 @@ header {
 aside {
   position: sticky;
   top: 0;
-  flex: 0 0 15%;
-  min-width: 200px;
+  min-width: fit-content;
   display: flex;
   flex-direction: column;
   height: calc(100vh - 56px);
@@ -208,7 +210,7 @@ aside {
     align-items: center;
     width: 200px;
     height: 40px;
-    padding: 0 12px;
+    margin: 0 12px;
     border-radius: 10px;
     color: #898989;
     cursor: pointer; }
@@ -224,7 +226,7 @@ aside {
   aside .guide > li:nth-child(3) {
     margin-bottom: 40px; }
   aside .settings {
-    margin: 20px 0; }
+    margin: 20px 12px; }
   aside .subscriptions {
     font-size: 1.5rem;
     padding: 20px; }
