--- a/styles/sass/abstract/mixins.scss
+++ b/styles/sass/abstract/mixins.scss
@@ -11,7 +11,7 @@
   align-items: center;
   width: 200px;
   height: 40px;
-  padding: 0 12px;
+  margin: 0 12px;
   border-radius: 10px;
   color: $menu-item-color;
   cursor: pointer;
