--- a/styles/sass/layout/aside.scss
+++ b/styles/sass/layout/aside.scss
@@ -1,8 +1,7 @@
 aside {
   position: sticky;
   top: 0;
-  flex: 0 0 15%;
-  min-width: 200px;
+  min-width: fit-content;
   display: flex;
   flex-direction: column;
   height: calc(100vh - #{$header-height});
@@ -18,7 +17,7 @@ aside {
   }
 
   .settings {
-    margin: 20px 0;
+    margin: 20px 12px;
   }
 
   .subscriptions {
